--- a/BLAZAMGui/UI/Inputs/ADAutoComplete.razor
+++ b/BLAZAMGui/UI/Inputs/ADAutoComplete.razor
@@ -4,6 +4,8 @@
                  Disabled=@Disabled
                  T="IDirectoryEntryAdapter"
                  Label="@Label"
+                 AnchorOrigin="@AnchorOrigin"
+                 TransformOrigin="@TransformOrigin"
 @bind-Value="SelectedResult"
 @bind-Text=@SearchTerm
 @ref=AutoComplete
@@ -73,6 +75,11 @@
     public string? Class { get; set; }
     [Parameter]
     public string AdornmentIcon { get; set; } = Icons.Material.Filled.Search;
+    [Parameter]
+    public Origin TransformOrigin { get; set; } = Origin.TopCenter;
+
+    [Parameter]
+    public Origin AnchorOrigin { get; set; } = Origin.BottomCenter;
 
     [Parameter]
     public bool Disabled { get; set; }
