--- a/BLAZAMGui/UI/Users/NewUserNameEntry.razor
+++ b/BLAZAMGui/UI/Users/NewUserNameEntry.razor
@@ -1,29 +1,35 @@
 ﻿@inherits AppComponentBase
 <EditForm Model="NewUserName">
 
-<Section Title=@AppLocalization["Name"]>
+    <Section Title=@AppLocalization["Name"]>
 
-        
-            
-            <MudTextField Label="@AppLocalization["First Name"]" @bind-Value="@NewUserName.GivenName" />
 
-            
-        
-        
 
-                <MudTextField Label="@AppLocalization["Middle Name"]" @bind-Value="@NewUserName.MiddleName" />
+        <MudTextField Label="@AppLocalization["First Name"]" @bind-Value="@NewUserName.GivenName" />
 
-            
-        
-        
 
-                <MudTextField Label="@AppLocalization["Last Name"]" @bind-Value="@NewUserName.Surname" />
 
-            
-        
-  
-</Section>
+
+
+        <MudTextField Label="@AppLocalization["Middle Name"]" @bind-Value="@NewUserName.MiddleName" />
+
+
+
+
+
+        <MudTextField Label="@AppLocalization["Last Name"]" @bind-Value="@NewUserName.Surname" />
+
+
+
+
+    </Section>
 </EditForm>
+<MudButton Color=Color.Primary
+           OnClick="OnBack">Back</MudButton>
+<MudButton Color="Color.Success"
+           OnClick="OnNext"
+           Disabled=@(newUserName is null || (newUserName.Surname.IsNullOrEmpty() && newUserName.GivenName.IsNullOrEmpty()))>Next</MudButton>
+
 
 @code {
 
@@ -31,14 +37,21 @@
     NewUserName newUserName;
 
     [Parameter]
-    public NewUserName NewUserName{ get => newUserName;set
+    public NewUserName NewUserName
+    {
+        get => newUserName; set
         {
             if (value == newUserName) return;
-            newUserName=value;
+            newUserName = value;
             NewUserNameChanged.InvokeAsync(newUserName);
 
-        } }
+        }
+    }
 
     [Parameter]
     public EventCallback<NewUserName> NewUserNameChanged { get; set; }
+    [Parameter]
+    public EventCallback OnNext { get; set; }
+    [Parameter]
+    public EventCallback OnBack { get; set; }
 }
