--- a/BLAZAMGui/UI/Settings/Templates/TemplateOverride.razor
+++ b/BLAZAMGui/UI/Settings/Templates/TemplateOverride.razor
@@ -1,4 +1,5 @@
 @inject NavigationManager Nav
+@inject IStringLocalizer<AppLocalization> AppLocalization
 <MudTooltip ShowOnHover=@(SourceTemplate!=null)
             Text=""
             RootClass="@Class">
@@ -12,7 +13,7 @@
     </MudBadge>
     <MudPopover Open="@_popoverOpen" Fixed="true" Class="px-4 pt-4">
         <div class="d-flex flex-column">
-            <MudText>Inherited from<MudLink OnClick="@(()=>{Nav.NavigateTo("/templates/"+SourceTemplate.Id);})"> @SourceTemplate</MudLink></MudText>
+            <MudText>@AppLocalization["Inherited from"] <MudLink OnClick="@(()=>{Nav.NavigateTo("/templates/"+SourceTemplate.Id);})"> @SourceTemplate</MudLink></MudText>
             <MudButton OnClick="@(()=>{_popoverOpen=false;})" Class="ml-auto mr-n3 mb-1" Color="Color.Error">Close</MudButton>
         </div>
     </MudPopover>
