--- a/BLAZAM/Pages/Users/ConfirmNewUser.razor
+++ b/BLAZAM/Pages/Users/ConfirmNewUser.razor
@@ -186,7 +186,7 @@ InDirectoryTemplate(ActiveDirectoryFields.PhysicalDeliveryOffice)
         try
         {
             disableCreateUserButton =true;
-            InvokeAsync(StateHasChanged);
+            await InvokeAsync(StateHasChanged);
             IJob createUserJob = new Job(AppLocalization["Create User"]);
             createUserJob.StopOnFailedStep = true;
             createUserJob.ShowJobDetailsDialog(MessageService);
