--- a/BLAZAMGui/UI/Settings/Templates/EditDirectoryTemplate.razor
+++ b/BLAZAMGui/UI/Settings/Templates/EditDirectoryTemplate.razor
@@ -70,10 +70,10 @@ await ParentTemplateChanged(null);
                             <code>{username}</code>:Username<br />
                         </MudStack>
                         <MudStack Row=true>
-                            <code>{AlphaNum[:u/l]}</code>:Random letter or number (optional force uppercase/lowercase)<br />
+                            <code>{AlphaNum[u/l]}</code>:Random letter or number (optional force uppercase/lowercase)<br />
                         </MudStack>
                         <MudStack Row=true>
-                            <code>{Alpha[:u/l]}</code>:Random letter (optional force uppercase/lowercase)<br />
+                            <code>{Alpha[u/l]}</code>:Random letter (optional force uppercase/lowercase)<br />
                         </MudStack>
                         <MudStack Row=true>
                             <code>{Num}</code>:Random number<br />
