Disable Groups tab on user creation befoe user is created

--- a/BLAZAM/Pages/Users/CreateUser.razor
+++ b/BLAZAM/Pages/Users/CreateUser.razor
@@ -71,7 +71,7 @@
 
     </MudTabPanel>
 
-    <MudTabPanel Class=@(SelectedTemplate!=null?"":"d-none") Disabled="@(newUser==null && SelectedTemplate?.AllowCustomGroups==true)">
+    <MudTabPanel Class=@(SelectedTemplate!=null?"":"d-none") Disabled="@(newUser==null)">
         <TabContent>
             @AppLocalization["Groups"]
         </TabContent>
